Updated main page.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>pywws</title>
-<meta http-equiv="REFRESH" content="0;url=doc/html/index.html"></HEAD>
+<meta http-equiv="REFRESH" content="0;url=doc/en/html/index.html"></HEAD>
 <BODY>
-If the pywws page doesn't load automatically, please follow <a href="doc/html/index.html">this link</a>.
+If the pywws page doesn't load automatically, please follow <a href="doc/en/html/index.html">this link</a>.
 </BODY>
 </HTML>
